// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headline should render as h1 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 32px;
  line-height: 32px;
}

<h1
  class="circuit-0"
>
  h1 headline
</h1>
`;

exports[`Headline should render as h2 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 32px;
  line-height: 32px;
}

<h2
  class="circuit-0"
>
  h2 headline
</h2>
`;

exports[`Headline should render as h3 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 32px;
  line-height: 32px;
}

<h3
  class="circuit-0"
>
  h3 headline
</h3>
`;

exports[`Headline should render as h4 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 32px;
  line-height: 32px;
}

<h4
  class="circuit-0"
>
  h4 headline
</h4>
`;

exports[`Headline should render as h5 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 32px;
  line-height: 32px;
}

<h5
  class="circuit-0"
>
  h5 headline
</h5>
`;

exports[`Headline should render as h6 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 32px;
  line-height: 32px;
}

<h6
  class="circuit-0"
>
  h6 headline
</h6>
`;

exports[`Headline should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 32px;
  line-height: 32px;
  margin-bottom: 0;
}

<h2
  class="circuit-0"
/>
`;

exports[`Headline should render with size four 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 18px;
  line-height: 18px;
}

<h2
  class="circuit-0"
>
  four headline
</h2>
`;

exports[`Headline should render with size one 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 32px;
  line-height: 32px;
}

<h2
  class="circuit-0"
>
  one headline
</h2>
`;

exports[`Headline should render with size three 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 20px;
  line-height: 20px;
}

<h2
  class="circuit-0"
>
  three headline
</h2>
`;

exports[`Headline should render with size two 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 24px;
  line-height: 24px;
}

<h2
  class="circuit-0"
>
  two headline
</h2>
`;
